Add links to track, event and room pages

--- a/content/faq.html
+++ b/content/faq.html
@@ -4,6 +4,22 @@ navtitle: FAQ
 ---
 <div class="developers-block">
     <div class="text-block">
+        <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
+        <p>
+            All talks can be watched from our website. Go to <a href="page:live">fosdem/2021/live</a>, click on the track
+            that interests you and enjoy the talk.
+        </p>
+        <p>
+            You can also go to the <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
+            <i>Watch the live stream</i>-link and enjoy the presentation.
+        </p>
+        <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
+        <p>
+            Easy! Go to <a href="page:live">fosdem/2021/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
+            to go directly to an interesting talk) register an account with <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>
+            (see <a href="page:practical/online">our practical information page</a> for more details) and ask away.
+            Please remember to keep the conversation civil and on topic.
+        </p>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
         <p>No registration is required.</p>
 
