--- a/content/schedule/buildings.html
+++ b/content/schedule/buildings.html
@@ -2,6 +2,37 @@
 title: Buildings
 forcepagelinks: true
 ---
+<% if @site.config.fetch(:virtual) %>
+<p>
+  While a virtual FOSDEM does not have buildings, our conference management system expects them. So we reused them to group talks by their
+  type.
+</p>
+<p>
+  Find an overview below.
+</p>
+<table class="table table-striped table-bordered table-condensed">
+  <thead>
+    <tr>
+    <th>Building</th>
+    <th style="text-align: center;">Rooms</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% $buildings.each do |building, rooms| %>
+      <tr>
+        <th class="title"><a name="<%= building.downcase %>"></a><%= building %></th>
+        <td>
+          <ul>
+            <% rooms.each do |room| %>
+              <li><%= l(room) %></li>
+            <% end %>
+          </ul>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<% else %>
 <p>
 The various events are spread over several buildings (clusters of rooms)
 over the campus.
@@ -38,3 +69,4 @@ Here is a list of those buildings, and the rooms in each of them.
         <img style="display: block; margin-left: auto; margin-right: auto" src="asset:campusmap" alt="ULB Solbosch Campus map" title="ULB Solbosch Campus map"}/>
       </div>
 
+<% end %>
