--- a/content/social.html
+++ b/content/social.html
@@ -11,3 +11,5 @@ navtitle: Social media
   <li><a href="https://www.instagram.com/fosdem/">Instagram</a></li>
   <li><a href="https://fosstodon.org/@fosdem">Mastodon</a></li>
 </ul>
+
+<a href="asset:devroom_full_only">.</a>
