--- a/content/social.html
+++ b/content/social.html
@@ -12,4 +12,4 @@ navtitle: Social media
   <li><a href="https://fosstodon.org/@fosdem">Mastodon</a></li>
 </ul>
 
-<a href="asset:devroom_full_only">.</a>
+<a href="asset:devroom_full_only">&#8288</a>
