--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="text-block">
       <h2>FOSDEM is a free event for software developers to meet, share ideas and collaborate.</h2>
       <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. In 2021, they will gather online.</p>
-      <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
+      <p class="btn-news"><a href="page:live">Visit the conference floor!</a></p>
     </div>
 
     <%
