--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -10,97 +10,72 @@ navcat: true
 </p>
 <a name="infodesk"></a>
 <p>
-    Have any questions after reading this document? Prefer to talk to a human being? Join the <a href="https://chat.fosdem.org/#/room/#infodesk:fosdem.org">Infodesk channel</a>
+    Have any questions after reading this document? Prefer to talk to a human being? Join the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk channel</a>
     on <i>chat.fosdem.org</i>.
 </p>
 
 <a name="conference"></a>
 <h3>Visiting the conference</h3>
 <p>
-    Visiting the conference is as always free. All talks (keynotes, devrooms) are on the <a href="page:schedule">schedule</a>, while the stands have
-    their own <a href="https://stands.fosdem.org">website</a>. To make this a real conference instead of a stream of videos, we've combined our
-    existing video system with <a href="https://jitsi.org/">Jitsi</a> for live video and <a href="https://matrix.org/">Matrix</a> for interaction and
-    putting everything together.
+    Visiting the conference is as always free and without registration. You can go to <a href="page:schedule">any talk, track or room</a> you like, click on
+    a video link (<i>Video with Q&A</i> will give you a live stream and allow you to see the Q&A happening; <i>Video only</i> will take you directly to the
+    live stream) and watch the talk.
 </p>
 <p>
-    <b>You do not need an account to visit the conference, watch talks or visit stands.</b> You will need a Matrix account from 
-    <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> (or elsewhere) to participate in the discussion or upvote questions. We'll explain all this, so don't
-    worry!
+    To browse around to see what is available, go to <a href="page:live">our conference floor</a>, where you can find all the rooms and all the talks.
+    Simply click on any that interest you to watch them.
+</p>
+<p>
+    If you simply wish to watch, you won't need an account. If you want to ask questions or participate in the discussion, you'll have to click either on
+    the <i>Video with Q&A</i> link or the <i>Join the conversation!</i> link and register an account (or use an existing Matrix account).
 </p>
 
 <a name="talks"></a>
 <h4>Talks</h4>
 <p>
-    The <a href="page:schedule">schedule</a> contains a link to each individual talk or devroom. Each devroom maps to a room on <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>. The
-    keynotes are in the <i>keynote</i> room.
+    All talks are on the <a href="page:schedule">schedule</a>, organised per <a href="page:schedule/tracks">track</a>. Each track happens in a room,
+    normally somewhere on the ULB campus, but now fully virtualised. There are two live streams for each room, one with only the video (called
+    <i>Video only</i>) and one with Q&A (called <i>Video with Q&A</i>). Both streams will show the same video, so you won't miss a thing.
 </p>
-<img src="/2021/practical/screen_1.png" alt="Click on the marked button to start the video." aria-labelledby="virtual-room-view-before-you-can-start" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
-<div id="virtual-room-view-before-you-can-start" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Before you can see any video, you will have to click the button (1.) to enable the video stream.</i></div>
+<img src="/2021/practical/devroom_main_view.png" style="margin: .5em 2% 2em 2%; width: 96%;" alt="Video with Q&A." />
 <p>
-    In each room, you'll see a fairly large widget which will display the video stream. The first time you visit <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>,
-    you'll have to click <i>allow</i> so the widget can start playing videos. You can resize the video widget or watch it full screen.
+    If you want to say things in the chat, you’ll need to sign up for an account (the green <i>Sign up</i> button at the bottom right).
+    Alternatively, if you already have an account somewhere on Matrix, you can sign in with that one.
 </p>
-<img src="/2021/practical/main_conference_screen.png" alt="Room view." aria-labelledby="virtual-room-view" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
-<div id="virtual-room-view" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Room view. 1 is the video window; 2 is the chat window.</i></div>
+<a name="q_and_a"></a>
+<h5>Q&A</h5>
 <p>
-    Below the video stream is the interactive part of FOSDEM 2021: the (Matrix) chat window. During the talk, you can discuss the topic with all other
-    attendees. You will have to create a <a href="#chatting">Matrix account</a> to participate, and while we encourage free and open exchange of views,
-    both the devroom and FOSDEM staff will be moderating the discussion. Any violations of our <a href="page:practical/conduct">code of conduct</a> will
-    be acted on.
-</p>
-<p>
-    If you find a question or remark interesting or useful, you can <a href="#upvoting">upvote it</a> by giving it a <i>thumbs up</i>. The most upvoted
-    questions will be visible to the host and speaker, who will answer (some) of them during the Q&A.
+    During talks, you can discuss the talk and ask questions for the speakers to answer live at the end.
+    You can upvote messages you particularly want the speaker to answer by reacting to the messages with a <i>thumbs up</i>.
+    (Click on the <i>...</i> button next to the message you want to react to). Please remember to keep the conversation civil and to the point. All
+    chatrooms are moderated by FOSDEM volunteers and we expect everyone to follow the <a href="page:practical/conduct">code of conduct</a>.
 </p>
 <p>
-    You can also participate in rooms via IRC (Freenode) or XMPP, although upvoting messages isn't yet bridged.  For instance, the Cloud devroom is available on Matrix at
-    <a href="https://matrix.to/#/#cloud:fosdem.org">#cloud:fosdem.org</a> but also <a href="irc://irc.freenode.net/fosdem-cloud">#fosdem-cloud</a> on Freenode and
-    <a href="xmpp://#cloud#fosdem.org@matrix.org?join">xmpp://#cloud#fosdem.org@matrix.org?join</a> on XMPP.
+    Any Matrix client can be used to attend, although we recommend <a href="https://chat.fosdem.org">chat.fosdem.org</a> which will be
+    kept up-to-date with any FOSDEM specific tweaks. To view the broadcasts, your client will need to support widgets, which currently means using
+    Element Web or Desktop 1.7.19, iOS 1.1.7 or Android 1.0.15 or later.
+</p>
+<p>
+    You can also attend most of chatrooms via IRC at #fosdem-<i>name of the room on chat.fosdem.org</i> on Freenode.
+    You can also attend them via XMPP as xmpp:#<i>name of the room on chat.fosdem.org</i>#fosdem.org@matrix.org?join.
+</p>
+<a name="mobile"></a>
+<h5>Notes for mobile users</h5>
+<p>
+    You can attend FOSDEM 2021 on mobile without a problem. However, the <i>Video with Q&A</i> links will not work on a mobile browser. If you
+    wish to participate in the Q&A, you'll have to click the <i>Join the conversation!</i> link instead. Watching the video feed via <i>Video only</i>
+    will always work, as will the <a href="page:live">conference floor page</a>.
 </p>
 
 <a name="stands"></a>
 <h4>Stands</h4>
 <p>
-    The stands have their own website over at <a href="https://stands.fosdem.org"><i>stands.fosdem.org</i></a>. We've organised the stands by a theme
-    so they are easier to find.
+    All stands can be visited at <a href="https://stands.fosdem.org"><i>stands.fosdem.org</i></a>. Go and check them out, there are a lot of
+    interesting projects present and some have provided a schedule when some interesting people will be available to talk to. You'll need nothing
+    but a web browser to visit the stands.
 </p>
 <p>
-    There is a nice cosy corner for each stand containing of static information (a web page), some prerecorded video's and a chatroom on <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> using the
-    same principle as for devrooms.  Stand admins can add a moderated live-stream/video widget by pressing the video call button on chat.fosdem.org to videochat with visitors if they like.
-</p>
-<p>
-    As for devrooms, <b>you do not need an account to visit a stand or watch a video</b>, but you will need a <a href="#chatting">Matrix account</a> if you wish to participate in the discussion.
-    There will be someone present in each room from the project team to answer any questions you might have, and some have invited a developer/project leader/ ... to
-    provide a hint of the future for their project and to answer any pressing question you might have.
-</p>
-
-<a name="q_and_a"></a>
-<h3>Participating</h3>
-<p>
-    If you want to participate in the event (which we would like very much), you'll need to create a <a href="#chatting">Matrix account</a>.
-</p>
-<a name="chatting"></a>
-<h4>Chatting</h4>
-<img src="/2021/practical/register.png" alt="Register button." aria-labelledby="register-button" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
-<div id="register-button" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Click on the "register" button to register an account.</i></div>
-
-<img src="/2021/practical/register_screen.png" alt="Register for an account." aria-labelledby="register-chat" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
-<div id="register-chat" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Choose a username, password and optionally provide an e-mail address.</i></div>
-<p>
-    You want to ask a question, provide an opinion or upvote an interesting remark? Create an account! Thanks to the good people at Matrix this process is
-    fairly self-explanatory. Provide a username, password and optionally an e-mail address and you'll be good to go!
-</p>
-<p>
-    When participating in the discussion, please remember to be civil and respectful. Both the devroom (or stand) organisers will moderate the talk and
-    any violations of our <a href="page:practical/conduct">code of conduct</a> will be dealt with.
-</p>
-<a name="upvoting"></a>
-<h4>Upvoting questions</h4>
-<img src="/2021/practical/upvote.png" alt="Click on the emoji face to upvote a question." aria-labelledby="upvote-question" style="max-width: 96%; margin: 2em 2% 0 2%;" />
-<div id="upvote-question" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Click on the face (1.) to upvote a question.</i></div>
-<img src="/2021/practical/upvote_thumbs_up.png" alt="Click on the thumbs up emjoi to upvote a question." aria-labelledby="thumbs-up-question" style="max-width: 96%; margin: 2em 2% 0 2%;" />
-<div id="thumbs-up-question" style="margin: .5em 2% 2em 2%; width: 96%;"><i>After clicking on the face, you'll arrive at a larger window with a lot of emoji's. Clicking on the thumbs up icon (1.) will upvote the question.</i></div>
-<p>
-    You can upvote a question by clicking on the emoji face next to each line. When you click on <i>thumbs up</i>, the question or comment will be upvoted. The most upvoted
-    questions will be visible to the host and speaker, who will answer (some) of them during the Q&A.
+    You can talk to the people behind the project by clicking the <i>Join the conversation!</i> link on each stand page. We use the same software as
+    for the <a href="#q_and_a">talks Q&A</a> to enable this, so simply click the link, register and participate. You can find all the details
+    <a href="#q_and_a">here</a>!
 </p>
