Add reference to the possibility of downvoting questions during Q&A

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -46,7 +46,7 @@ navcat: true
 <h5>Q&A</h5>
 <p>
     During talks, you can discuss the talk and ask questions for the speakers to answer live at the end.
-    You can upvote messages you particularly want the speaker to answer by reacting to the messages with a <i>thumbs up</i>.
+    You can upvote messages you particularly want the speaker to answer by reacting to the messages with a <i>thumbs up</i>, or downvote them with a <i>thumbs down</i>.
     (Click on the <i>...</i> button next to the message you want to react to). Please remember to keep the conversation civil and to the point. All
     chatrooms are moderated by FOSDEM volunteers and we expect everyone to follow the <a href="page:practical/conduct">code of conduct</a>.
 </p>
