--- a/content/live/index.html
+++ b/content/live/index.html
@@ -3,37 +3,39 @@ title: FOSDEM 2021
 ---
 <div class="s-block">
 
-    <div class="text-block">
+    <div class="text-block" style="margin-bottom: 5em;">
       <h2>Welcome to the conference floor for FOSDEM 2021!</h2>
       <p>Find an overview of all talks and all stands. Click on any of them to visit or view them; no registration or configuration required.</p>
       <p><a href="page:schedule">Visit the schedule</a> to find out what's on in what room, click on your favourite room, sit back and relax.</p>
       <p>Confused? Unsure how to proceed? <a href="page:practical/online">Visit the practical information page</a>, <a href="page:faq">look in the FAQ</a>
     or <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">talk to a human at the Infodesk</a>!</p>
-      <p class="btn-news"><a href="#talks">To the talks.</a></p>
+      <p class="btn-news"><a href="#keynotes">To the main tracks.</a></p>
+      <p class="btn-news"><a href="#devrooms">To the devrooms.</a></p>
       <p class="btn-news"><a href="#stands">To the stands.</a></p>
       <p class="btn-news"><a href="page:schedule">To the schedule.</a></p>
     </div>
-
     <div class="container">
-        <div class="row" style="margin-top: 5em; margin-bottom: 3em">
-            <div class="span12">
-                <a name="talks"></a>
-                <h2>Talks</h2>
+            <% keynotes = tracks.select{|t| ['maintrack', 'lightningtalks'].include? t[:type] } %>
+            <% devrooms = tracks.select{|t| ['devroom'].include? t[:type] } %>
+            <% stands = tracks.select{|t| ['standtrack'].include? t[:type] } %>
+            <% track_nice_types = {'devroom' => 'Devroom', 'maintrack' => 'Main track', 'lightningtalks' => 'Lightning talk'} %>
+            <% go_live = @site.config.fetch(:go_live) %>
+            <div class="row" style="margin-top: 5em; margin-bottom: 2em;">
+                <div class="span12 hero-unit text-center"
+                     style="padding-bottom: 1em; padding-top: 1em; margin-left: 0; margin-right: 1;">
+                    <a name="keynotes"></a>
+                    <h3>MAIN TRACKS</h3>
+                </div>
             </div>
-        </div>
-        <% room_tracks = tracks.select{|t| ['devroom', 'maintrack', 'lightningtalks'].include? t[:type] } %>
-        <% track_nice_types = {'devroom' => 'Devroom', 'maintrack' => 'Main track', 'lightningtalks' => 'Lightning talk'} %>
-        <% go_live = @site.config.fetch(:go_live) %>
-        <% room_tracks.each_with_index do | track, i | %>
-        <% if i == 0 || i % 3 == 0 %>
+            <% keynotes.each_with_index do | track, i | %>
+            <% if i == 0 || i % 3 == 0 %>
             <div class="row">
-        <% end %>
-                <div class="span4">
-                    <div>
+                <% end %>
+                <div class="span4" style="margin-bottom: 2em;">
                         <% if go_live %>
-                            <% if track[:rooms] && track[:rooms][0] %>
-                                <a href="<%= stream_link(track) %>"><img src="fosdem_2021_live.png" alt="Click for the live stream."/></a>
-                            <% end %>
+                        <% if track[:rooms] && track[:rooms][0] %>
+                        <a style="font-size: 3em; line-height: 1.5em;" href="<%= stream_link(track) %>"><span>LIVE</span></a>
+                        <% end %>
                         <% end %>
                         <% if track_nice_types[track[:type]] %>
                         <h4><%= track[:name] %> <small><%= track_nice_types[track[:type]] %></small></h4>
@@ -42,51 +44,105 @@ title: FOSDEM 2021
                         <% end %>
                         <% if go_live %>
                         <ul class="unstyled">
-                            <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the schedule for this track.</a></li>
+                            <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
+                                schedule for this track.</a></li>
                             <% if track[:rooms] && track[:rooms][0] %>
-                            <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video with Q&A</a></li>
+                            <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
+                                with Q&A</a></li>
                             <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
-                            <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the conversation.</a></li>
+                            <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the
+                                conversation.</a></li>
                             <% end %>
                         </ul>
                         <% else %>
-                            <p>We haven't started yet. <a href="page:schedule/track/<%= track[:slug] %>">Visit the schedule</a> to see what we have planned.</p>
+                        <p>We haven't started yet. <a href="page:schedule/track/<%= track[:slug] %>">Visit the schedule</a> to
+                            see what we have planned.</p>
                         <% end %>
-                    </div>
                 </div>
-        <% if i % 3 == 2 || i == room_tracks.length() - 1 %>
+                <% if i % 3 == 2 || i == keynotes.length() - 1 %>
             </div>
-        <% end %>
-        <% end %>
-    </div>
-    <div class="row" style="margin-top: 5em; margin-bottom: 2-em;">
-        <div class="span12">
-            <a name="stands"></a>
-            <h2>Stands</h2>
-        </div>
-    </div>
-    <% stand_tracks = tracks.select{|t| ['standtrack'].include? t[:type] } %>
-    <% stand_tracks.each_with_index do | stand, i | %>
-        <% if i == 0 || i % 3 == 0 %>
+            <% end %>
+            <% end %>
+            <div class="row" style="margin-top: 5em; margin-bottom: 2em;">
+                <div class="span12 hero-unit text-center"
+                     style="padding-bottom: 1em; padding-top: 1em; margin-left: 0; margin-right: 1;">
+                    <a name="devrooms"></a>
+                    <h3>DEVROOMS</h3>
+                </div>
+            </div>
+            <% devrooms.each_with_index do | track, i | %>
+            <% if i == 0 || i % 3 == 0 %>
             <div class="row">
-        <% end %>
-                <div class="span4">
-                    <div>
+                <% end %>
+                <div class="span4" style="margin-bottom: 2em;">
+                        <% if go_live %>
+                        <% if track[:rooms] && track[:rooms][0] %>
+                        <a style="font-size: 3em; line-height: 1.5em;" href="<%= stream_link(track) %>"><span>LIVE</span></a>
+                        <% end %>
+                        <% end %>
+                        <% if track_nice_types[track[:type]] %>
+                        <h4><%= track[:name] %> <small><%= track_nice_types[track[:type]] %></small></h4>
+                        <% else %>
+                        <h4><%= track[:name] %> <small>Talk</small></h4>
+                        <% end %>
+                        <% if go_live %>
+                        <ul class="unstyled">
+                            <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
+                                schedule for this track.</a></li>
+                            <% if track[:rooms] && track[:rooms][0] %>
+                            <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
+                                with Q&A</a></li>
+                            <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
+                            <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the
+                                conversation.</a></li>
+                            <% end %>
+                        </ul>
+                        <% else %>
+                        <p>We haven't started yet. <a href="page:schedule/track/<%= track[:slug] %>">Visit the schedule</a> to
+                            see what we have planned.</p>
+                        <% end %>
+                </div>
+                <% if i % 3 == 2 || i == keynotes.length() - 1 %>
+            </div>
+            <% end %>
+            <% end %>
+            <div class="row" style="margin-top: 5em; margin-bottom: 2em;">
+                <div class="span12 hero-unit text-center"
+                     style="padding-bottom: 1em; padding-top: 1em; margin-left: 0; margin-right: 1;">
+                    <a name="stands"></a>
+                    <h2>STANDS</h2>
+                </div>
+            </div>
+            <% stands.each_with_index do | stand, i | %>
+            <% if i == 0 || i % 3 == 0 %>
+            <div class="row">
+                <% end %>
+                <div class="span4" style="margin-bottom: 2em;">
+                        <% if go_live %>
+                        <% if stand[:rooms] && stand[:rooms][0] %>
+                        <a style="font-size: 3em; line-height: 1.5em;" href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(stand[:rooms][0]) %>"><span>LIVE</span></a>
+                        <% end %>
+                        <% end %>
                         <h4><%= stand[:name] %> <small>Stand</small></h4>
                         <ul class="unstyled">
-                        <% if stand[:rooms] && stand[:rooms][0] %>
-                            <li><i class="icon-picture"></i> Visit the stand at <a href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(stand[:rooms][0]) %>">stands.fosdem.org</a>!</li>
-                        <% end %>
-                        <% if go_live && stand[:rooms] && stand[:rooms][0] %>
-                            <li><i class="icon-comment"></i> <a href="<%= stream_link(stand, is_chat=true) %>">Take part in the conversation.</a></li>
-                        <% else %>
-                        <li>We haven't started yet. <a href="page:schedule/track/<%= stand[:slug] %>">Visit the schedule</a> to see what we have planned.</li>
-                        <% end %>
+                            <% if stand[:rooms] && stand[:rooms][0] %>
+                            <li><i class="icon-picture"></i> Visit the stand at <a
+                                    href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(stand[:rooms][0]) %>">stands.fosdem.org</a>!
+                            </li>
+                            <% end %>
+                            <% if go_live && stand[:rooms] && stand[:rooms][0] %>
+                            <li><i class="icon-comment"></i> <a href="<%= stream_link(stand, is_chat=true) %>">Take part in the
+                                conversation.</a></li>
+                            <% else %>
+                            <li>We haven't started yet. <a href="page:schedule/track/<%= stand[:slug] %>">Visit the schedule</a>
+                                to see what we have planned.
+                            </li>
+                            <% end %>
                         </ul>
-                    </div>
                 </div>
-        <% if i % 3 == 2 || i == stand_tracks.length() - 1 %>
+                <% if i % 3 == 2 || i == stands.length() - 1 %>
             </div>
-        <% end %>
-        <% end %>
+            <% end %>
+            <% end %>
+    </div>
 </div>
