--- a/content/live/index.html
+++ b/content/live/index.html
@@ -21,6 +21,7 @@ title: FOSDEM 2021
             <% stands = tracks.select{|t| ['standtrack'].include? t[:type] } %>
             <% track_nice_types = {'devroom' => 'Devroom', 'maintrack' => 'Main track', 'lightningtalks' => 'Lightning talk'} %>
             <% go_live = @site.config.fetch(:go_live) %>
+            <% matrix_works = @site.config.fetch(:matrix_works) %>
             <div class="row" style="margin-top: 5em; margin-bottom: 2em;">
                 <div class="span12 hero-unit text-center"
                      style="padding-bottom: 1em; padding-top: 1em; margin-left: 0; margin-right: 1;">
@@ -90,12 +91,14 @@ title: FOSDEM 2021
                         <ul class="unstyled">
                             <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
                                 schedule for this track.</a></li>
-                            <% if track[:rooms] && track[:rooms][0] %>
+                            <% if track[:rooms] && track[:rooms][0]  && matrix_works%>
                             <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
                                 with Q&A</a></li>
                             <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
+                            <% if  matrix_works %>
                             <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the
                                 conversation.</a></li>
+                            <% end %>
                             <% end %>
                         </ul>
                         <% else %>
@@ -131,7 +134,7 @@ title: FOSDEM 2021
                                     href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(stand[:rooms][0]) %>">stands.fosdem.org</a>!
                             </li>
                             <% end %>
-                            <% if go_live && stand[:rooms] && stand[:rooms][0] %>
+                            <% if go_live && stand[:rooms] && stand[:rooms][0] && matrix_works %>
                             <li><i class="icon-comment"></i> <a href="<%= stream_link(stand, is_chat=true) %>">Take part in the
                                 conversation.</a></li>
                             <% else %>
