--- a/content/live/index.html
+++ b/content/live/index.html
@@ -91,7 +91,7 @@ title: FOSDEM 2021
                         <ul class="unstyled">
                             <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
                                 schedule for this track.</a></li>
-                            <% if track[:rooms] && track[:rooms][0]  && matrix_works%>
+                            <% if track[:rooms] && track[:rooms][0] %>
                             <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
                                 with Q&A</a></li>
                             <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
