--- a/content/live/index.html
+++ b/content/live/index.html
@@ -49,8 +49,12 @@ title: FOSDEM 2021
                             <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
                                 schedule for this track.</a></li>
                             <% if track[:rooms] && track[:rooms][0] %>
+                            <% if matrix_works %>
                             <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
                                 with Q&A</a></li>
+                            <% else %>
+                            <li class="visible-desktop"><i class="icon-facetime-video"></i> We've hit a snag. The <i>Video only</i> link still works!</li>
+                            <% end %>
                             <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
                             <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the
                                 conversation.</a></li>
@@ -92,8 +96,12 @@ title: FOSDEM 2021
                             <li><i class="icon-calendar"></i> <a href="page:schedule/track/<%= track[:slug] %>">Visit the
                                 schedule for this track.</a></li>
                             <% if track[:rooms] && track[:rooms][0] %>
-                            <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
+                            <% if matrix_works %>
+                                <li class="visible-desktop"><i class="icon-facetime-video"></i> <a href="<%= stream_link(track) %>">Video
                                 with Q&A</a></li>
+                            <% else %>
+                                <li class="visible-desktop"><i class="icon-facetime-video"></i> We've hit a snag. The <i>Video only</i> link still works!</li>
+                            <% end %>
                             <li><i class="icon-film"></i> <a href="<%= stream_direct_link(track) %>">Video only</a></li>
                             <% if  matrix_works %>
                             <li><i class="icon-comment"></i> <a href="<%= stream_link(track, is_chat=true) %>">Take part in the
@@ -134,9 +142,13 @@ title: FOSDEM 2021
                                     href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(stand[:rooms][0]) %>">stands.fosdem.org</a>!
                             </li>
                             <% end %>
-                            <% if go_live && stand[:rooms] && stand[:rooms][0] && matrix_works %>
+                            <% if go_live && stand[:rooms] && stand[:rooms][0] %>
+                            <% if matrix_works %>
                             <li><i class="icon-comment"></i> <a href="<%= stream_link(stand, is_chat=true) %>">Take part in the
                                 conversation.</a></li>
+                            <% else %>
+                            <li><i class="icon-comment"></i> We've hit a snag. You can still visit the stand!</li>
+                            <% end %>
                             <% else %>
                             <li>We haven't started yet. <a href="page:schedule/track/<%= stand[:slug] %>">Visit the schedule</a>
                                 to see what we have planned.
