--- a/content/faq.html
+++ b/content/faq.html
@@ -20,6 +20,10 @@ navtitle: FAQ
             (see <a href="page:practical/online">our practical information page</a> for more details) and ask away.
             Please remember to keep the conversation civil and on topic.
         </p>
+        <h5><span class="label label-info">Q:</span> Does the video show up in the room once it's time for the talk?</h5>
+        <p>
+            The video will play automatically on the stream at the correct time, but there will be a slight latency.
+        </p>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
         <p>No registration is required.</p>
 
