--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -59,6 +59,9 @@ navcat: true
     You can also attend most of chatrooms via IRC at #fosdem-<i>name of the room on chat.fosdem.org</i> on Freenode.
     You can also attend them via XMPP as xmpp:#<i>name of the room on chat.fosdem.org</i>#fosdem.org@matrix.org?join.
 </p>
+<p>
+    We recommend using the browser Matrix client.
+</p>
 <a name="mobile"></a>
 <h5>Notes for mobile users</h5>
 <p>
