Add more links to the live page

--- a/content/faq.html
+++ b/content/faq.html
@@ -24,6 +24,21 @@ navtitle: FAQ
         <p>
             The video will play automatically on the stream at the correct time, but there will be a slight latency.
         </p>
+        <h5><span class="label label-info">Q:</span> Where can I find the T-shirts and hoodies?</h5>
+        <p>
+            There are two places where you can find T-shirts, depending on whether you are in the EU or not.
+        </p>
+        <p>
+            Visitors from the EU go to <a href="https://treasure.fosdem.org">treasure.fosdem.org</a>, which ships
+            to the EU.
+        </p>
+        <p>
+            Visitors from the rest of the world go to <a href="https://row.treasure.fosdem.org">row.treasure.fosdem.org</a>.
+        </p>
+        <p>
+            If you can't find your country in either of the shops, send an e-mail to <i>treasure-at-fosdem-dot-org</i> with
+            how much hoodies/T-shirts you wish to order.
+        </p>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
         <p>No registration is required.</p>
 
