--- a/content/faq.html
+++ b/content/faq.html
@@ -4,6 +4,11 @@ navtitle: FAQ
 ---
 <div class="developers-block">
     <div class="text-block">
+        <h4>Watching and videos</h4>
+        <h5><span class="label label-info">Q:</span> In what timezone are you?</h5>
+        <p>
+            The conference is in Brussels time, which is CET (UTC + 1).
+        </p>
         <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
         <p>
             All talks can be watched from our website. Go to <a href="page:live">fosdem/2021/live</a>, click on the track
@@ -13,6 +18,12 @@ navtitle: FAQ
             You can also go to the <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
             <i>Watch the live stream</i>-link and enjoy the presentation.
         </p>
+        <h5><span class="label label-info">Q:</span> Are talk recordings available?</h5>
+        <p>
+            As this is a virtual conference with prerecorded talks, all talks are recorded. They will be made available on
+            <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a> as soon as the event has finished.
+        </p>
+        <h4>Chatting</h4>
         <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
         <p>
             Easy! Go to <a href="page:live">fosdem/2021/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
@@ -24,6 +35,7 @@ navtitle: FAQ
         <p>
             The video will play automatically on the stream at the correct time, but there will be a slight latency.
         </p>
+        <h4>T-shirts</h4>
         <h5><span class="label label-info">Q:</span> Where can I find the T-shirts and hoodies?</h5>
         <p>
             There are two places where you can find T-shirts, depending on whether you are in the EU or not.
@@ -39,6 +51,11 @@ navtitle: FAQ
             If you can't find your country in either of the shops, send an e-mail to <i>treasure-at-fosdem-dot-org</i> with
             how much hoodies/T-shirts you wish to order.
         </p>
+        <h5><span class="label label-info">Q:</span> How many T-shirts/hoodies are available?</h5>
+        <p>
+            You're in luck this year! As we work with a print-on-demand provider, there are no limits.
+        </p>
+        <h4>Registration</h4>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
         <p>No registration is required.</p>
 
@@ -50,5 +67,11 @@ navtitle: FAQ
 
         <h5><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h5>
         <p>Have a look at the <a href="page:/about/sponsors/">sponsor</a> page.</p>
+        <h4>FOSDEM in general</h4>
+        <h5><span class="label label-info">Q:</span> There is a mistake on the website, where do I report it?</h5>
+        <p>
+            You can talk to us in the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk</a> channel on <i>chat.fosdem.org</i> or open an issue on our
+            <a href="https://github.com/FOSDEM/website">Github repository</a>. Pull requests welcome!
+        </p>
     </div>
 </div>
