T-shirts and FAQ

--- a/content/faq.html
+++ b/content/faq.html
@@ -4,7 +4,20 @@ navtitle: FAQ
 ---
 <div class="developers-block">
     <div class="text-block">
-        <h4>Watching and videos</h4>
+        <h4>Contents</h4>
+        <ul>
+            <li><a href="#video">Visiting and videos</a></li>
+            <li><a href="#chat">Chatting and Q&A</a></li>
+            <li><a href="#tshirts">T-shirts</a></li>
+            <li><a href="#registration">Registration</a></li>
+            <li><a href="#fosdem">FOSDEM in general</a></li>
+        </ul>
+    </div>
+</div>
+<div class="developers-block">
+    <div class="text-block">
+        <a name="video"></a>
+        <h4>Visiting and videos</h4>
         <h5><span class="label label-info">Q:</span> In what timezone are you?</h5>
         <p>
             The conference is in Brussels time, which is CET (UTC + 1).
@@ -23,7 +36,8 @@ navtitle: FAQ
             As this is a virtual conference with prerecorded talks, all talks are recorded. They will be made available on
             <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a> as soon as the event has finished.
         </p>
-        <h4>Chatting</h4>
+        <a name="chat"></a>
+        <h4>Chatting and Q&A</h4>
         <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
         <p>
             Easy! Go to <a href="page:live">fosdem/2021/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
@@ -35,6 +49,7 @@ navtitle: FAQ
         <p>
             The video will play automatically on the stream at the correct time, but there will be a slight latency.
         </p>
+        <a name="tshirts"></a>
         <h4>T-shirts</h4>
         <h5><span class="label label-info">Q:</span> Where can I find the T-shirts and hoodies?</h5>
         <p>
@@ -55,6 +70,7 @@ navtitle: FAQ
         <p>
             You're in luck this year! As we work with a print-on-demand provider, there are no limits.
         </p>
+        <a name="registration"></a>
         <h4>Registration</h4>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
         <p>No registration is required.</p>
@@ -67,6 +83,7 @@ navtitle: FAQ
 
         <h5><span class="label label-info">Q:</span> My company loves FOSDEM, what are the sponsoring possibilities?</h5>
         <p>Have a look at the <a href="page:/about/sponsors/">sponsor</a> page.</p>
+        <a name="fosdem"></a>
         <h4>FOSDEM in general</h4>
         <h5><span class="label label-info">Q:</span> There is a mistake on the website, where do I report it?</h5>
         <p>
