Add Matrix troubleshooting info, based on Sat InfoDesk interactions.
Add a page with Matrix troubleshooting info.  This was originally wikied
at https://hackmd.io/tx01EcW9SgWQPYyREBHzrg and then converted to html
for this patch.

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -11,7 +11,8 @@ navcat: true
 <a name="infodesk"></a>
 <p>
     Have any questions after reading this document? Prefer to talk to a human being? Join the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk channel</a>
-    on <i>chat.fosdem.org</i>.
+    on <i>chat.fosdem.org</i>.  If that's not working for you, then please see <a href="page:matrixtrouble">this troubleshooting guide</a>, which also
+    includes another way to get to the Infodesk.
 </p>
 
 <a name="conference"></a>
