Tweak matrix troubleshooting

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -11,7 +11,7 @@ navcat: true
 <a name="infodesk"></a>
 <p>
     Have any questions after reading this document? Prefer to talk to a human being? Join the <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">Infodesk channel</a>
-    on <i>chat.fosdem.org</i>.  If that's not working for you, then please see <a href="page:matrixtrouble">this troubleshooting guide</a>, which also
+    on <i>chat.fosdem.org</i>.  If that's not working for you, then please see <a href="page:practical/matrix_troubleshooting">this troubleshooting guide</a>, which also
     includes another way to get to the Infodesk.
 </p>
 
@@ -52,7 +52,7 @@ navcat: true
     chatrooms are moderated by FOSDEM volunteers and we expect everyone to follow the <a href="page:practical/conduct">code of conduct</a>.
 </p>
 <p>
-    Any Matrix client can be used to attend, although we recommend <a href="https://chat.fosdem.org">chat.fosdem.org</a> which will be
+    Any Matrix client can be used to attend, although we recommend <a href="https://chat.fosdem.org/">chat.fosdem.org</a> which will be
     kept up-to-date with any FOSDEM specific tweaks. To view the broadcasts, your client will need to support widgets, which currently means using
     Element Web or Desktop 1.7.19, iOS 1.1.7 or Android 1.0.15 or later.
 </p>
@@ -74,7 +74,7 @@ navcat: true
 <a name="stands"></a>
 <h4>Stands</h4>
 <p>
-    All stands can be visited at <a href="https://stands.fosdem.org"><i>stands.fosdem.org</i></a>. Go and check them out, there are a lot of
+    All stands can be visited at <a href="https://stands.fosdem.org/"><i>stands.fosdem.org</i></a>. Go and check them out, there are a lot of
     interesting projects present and some have provided a schedule when some interesting people will be available to talk to. You'll need nothing
     but a web browser to visit the stands.
 </p>
