Added tshirt page

--- a/content/live/index.html
+++ b/content/live/index.html
@@ -1,5 +1,5 @@
 ---
-title: FOSDEM 2021
+title: Conference Floor
 ---
 <% keynotes = tracks.select{|t| ['maintrack', 'lightningtalks'].include? t[:type] } %>
 <% devrooms = tracks.select{|t| ['devroom'].include? t[:type] } %>
