Add size and link

--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -43,7 +43,7 @@ navtitle: T-shirts
          </p>
          <p>
              If you can't find your country in either of the shops or you can't use the provided payment methods, send an e-mail
-             to <i>treasure-at-fosdem-dot-org</i> with how much hoodies/T-shirts you wish to order.
+             to <i>treasure-at-fosdem-dot-org</i> with the amount and the size of the hoodies/T-shirts you wish to order.
          </p>
          <h6>Delivery fees</h6>
          <p>
