--- a/content/faq.html
+++ b/content/faq.html
@@ -36,6 +36,10 @@ navtitle: FAQ
             As this is a virtual conference with prerecorded talks, all talks are recorded. They will be made available on
             <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a> as soon as the event has finished.
         </p>
+        <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
+        <p>
+            Yes! Go over to <a href="https://matrix.to/#/#jobs:fosdem.org?web-instance[element.io]=chat.fosdem.org">#jobs:fosdem.org</a>!
+        </p>
         <a name="chat"></a>
         <h4>Chatting and Q&A</h4>
         <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
