--- a/content/faq.html
+++ b/content/faq.html
@@ -74,6 +74,10 @@ navtitle: FAQ
         <p>
             You're in luck this year! As we work with a print-on-demand provider, there are no limits.
         </p>
+        <h5><span class="label label-info">Q:</span> How long will T-shirts remain available?</h5>
+        <p>
+            You can get them till the end of the weekend after FOSDEM 2021 (2021-02-14). Don't miss out!
+        </p>
         <a name="registration"></a>
         <h4>Registration</h4>
         <h5><span class="label label-info">Q:</span> I plan on visiting FOSDEM, where can I register?</h5>
