--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -31,6 +31,9 @@ navtitle: T-shirts
             you donating to FOSDEM. However, we are having a virtual conference this time, so the T-shirt process is a
             bit different from last year. For example, you don't have to queue and they won't run out this year.
         </p>
+        <p>
+            You can get them till the end of the weekend after FOSDEM 2021 (2021-02-14). Don't miss out!
+        </p>
         <h5>T-shirts</h5>
         <img src="asset:t-shirt" alt="2021 T-shirt design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" />
         <p>
