Add news message on videos

--- a/content/faq.html
+++ b/content/faq.html
@@ -31,10 +31,16 @@ navtitle: FAQ
             You can also go to the <a href="page:schedule">schedule</a>, find the topic you are interested in, click on the
             <i>Watch the live stream</i>-link and enjoy the presentation.
         </p>
+        <a name="video-recordings"></a>
         <h5><span class="label label-info">Q:</span> Are talk recordings available?</h5>
         <p>
-            As this is a virtual conference with prerecorded talks, all talks are recorded. They will be made available on
-            <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a> as soon as the event has finished.
+            All talk recordings will be made available on
+            <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a> as soon as the presenter reviewed the contents to
+            make sure the recording is correct.
+        </p>
+        <p>
+            This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2021/">video.fosdem.org/2021</a>
+            for updates!
         </p>
         <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
         <p>
