irc: move to Libera.Chat

--- a/content/practical/matrix_troubleshooting.html
+++ b/content/practical/matrix_troubleshooting.html
@@ -100,11 +100,11 @@ That&#39;s because <a href="https://github.com/vector-im/element-web">Element</a
 <a name="help"></a>
 <h3>HELP!</h3>
 <p>
-  If you are still having trouble, you can get to the FOSDEM InfoDesk via IRC at the <code>#fosdem-infodesk</code> channel on the freenode IRC network. No IRC client either? Try <a href="https://webchat.freenode.net/">https://webchat.freenode.net/</a>
+  If you are still having trouble, you can get to the FOSDEM InfoDesk via IRC at the <code>#fosdem-infodesk</code> channel on the Libera.Chat IRC network.
 </p>
 
 <a name="ircinstead"></a>
 <h3>Participating via IRC</h2>
 <p>
-  Most FOSDEM 2021 Matrix rooms are &quot;bridged&quot; to channels on the Freenode IRC network.  e.g. the <code>#infodesk:fosdem.org</code> Matrix room is bridged to the Freenode IRC channel <code>#fosdem-infodesk</code>.  Other Matrix rooms follow the same pattern.  The keynotes stream is currently on IRC as <code>#fosdem-fosdem</code>.
+  Most FOSDEM 2021 Matrix rooms are &quot;bridged&quot; to channels on the Libera.Chat IRC network.  e.g. the <code>#infodesk:fosdem.org</code> Matrix room is bridged to the Libera.Chat IRC channel <code>#fosdem-infodesk</code>.  Other Matrix rooms follow the same pattern.  The keynotes stream is currently on IRC as <code>#fosdem-fosdem</code>.
 </p>
