--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -57,7 +57,7 @@ navcat: true
     Element Web or Desktop 1.7.19, iOS 1.1.7 or Android 1.0.15 or later.
 </p>
 <p>
-    You can also attend most of chatrooms via IRC at #fosdem-<i>name of the room on chat.fosdem.org</i> on Freenode.
+    You can also attend most of chatrooms via IRC at #fosdem-<i>name of the room on chat.fosdem.org</i> on Libera.Chat.
     You can also attend them via XMPP as xmpp:#<i>name of the room on chat.fosdem.org</i>#fosdem.org@matrix.org?join.
 </p>
 <p>
