--- a/content/volunteer.html
+++ b/content/volunteer.html
@@ -18,7 +18,7 @@ navtitle: Volunteer
 
         <p>While we can't offer you any compensation, it's called volunteering after all, you'll get an amazing experience, the chance to meet great people and the warm, fuzzy, feeling knowing that you made FOSDEM happen this year. We will also take care of you during your volunteering spell, ensuring that you are mentored and have everything you need while helping out.</p>
 
-        <p>Please go over to <a href="https://volunteers.fosdem.org/">volunteers.fosdem.org</a> to pick your tasks, subscribe to our <a href="https://lists.fosdem.org/listinfo/volunteers">volunteer mailing list</a> to get updated with the latest information. Before and especially during the conference, our <a href="https://webchat.freenode.net/?channels=fosdem-volunteers">IRC channel</a> (<em>#fosdem-volunteers</em>@<a href="https://freenode.net/">freenode</a>) is the place to go!</p>
+        <p>Please go over to <a href="https://volunteers.fosdem.org/">volunteers.fosdem.org</a> to pick your tasks, subscribe to our <a href="https://lists.fosdem.org/listinfo/volunteers">volunteer mailing list</a> to get updated with the latest information. Before and especially during the conference, our <a href="ircs://irc.libera.chat:6697/fosdem-volunteers">IRC channel</a> (<em>#fosdem-volunteers</em>@<a href="https://libera.chat/">Libera.Chat</a>) is the place to go!</p>
 
         <p>We hope to see you at FOSDEM!</p>
     </div>
