--- a/content/contact.html
+++ b/content/contact.html
@@ -11,7 +11,7 @@ title: Contact
 
 <p>
   You may also join us for a chat in
-  <a href="irc://irc.freenode.net/fosdem">the #fosdem channel on freenode</a>.
+  <a href="ircs://irc.libera.chat:6697/fosdem">the #fosdem channel on Libera.Chat</a>.
 </p>
 
 
